force-app/main/default/objects/RE_Taxonomy__c/RE_Taxonomy__c.object-meta.xml
<CustomObject>
    <description>This Object is use to create the Taxonomys</description>
    <label>Taxonomy</label>
    <nameField>
        <label>Taxonomy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxonomys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>