force-app/main/default/objects/RE_Taxonomy__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field is use to store Description of Taxonomy</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>