force-app/main/default/objects/RE_Taxonomy__c/fields/Factoid__c.field-meta.xml
<CustomField>
    <fullName>Factoid__c</fullName>
    <description>Holds Static Factoid data</description>
    <label>Factoid</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>