force-app/main/default/objects/RE_Taxonomy__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This field is use to store the Taxonomy Code.</description>
    <label>Taxonomy Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>